--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,9 @@
 </head>
 <body>
 <div id="car">
-  <!-- Car parts will be added here -->
+  <div id="chassis">
+    <!-- Châssis de la voiture -->
+  </div>
 </div>
 </body>
 </html>
