--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Voiture</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Voiture</title>
 </head>
 <body>
-<div id="car">
-  <!-- Car parts will be added here -->
-</div>
+    <div id="car">
+        <div id="chassis">
+            <!-- Châssis de la voiture -->
+        </div>
+        <div id="front-wheels">
+            <!-- Roues avant de la voiture -->
+        </div>
+    </div>
 </body>
 </html>
