add back wheels

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <div id="chassis">
     <!-- Châssis de la voiture -->
   </div>
+  <div id="front-wheels">
+    <!-- Roues avant de la voiture -->
+  </div>
+
+  <div id="back-wheels">
+    <!-- Roues arrière de la voiture -->
+  </div>
 </div>
 </body>
 </html>
