Add head lights

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <div id="back-wheels">
     <!-- Roues arrière de la voiture -->
   </div>
+
+  <div id="head-lights">
+    <!-- Phares avant de la voiture -->
+  </div>
 </div>
 </body>
 </html>
