--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <div id="head-lights">
     <!-- Phares avant de la voiture -->
   </div>
+
+  <div id="back-lights">
+    <!-- Phares avant de la voiture -->
+  </div>
 </div>
 </body>
 </html>
