--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   <div id="back-lights">
     <!-- Phares avant de la voiture -->
   </div>
+
+
+  <div id="doors">
+    <!-- portes de la voiture -->
+  </div>
 </div>
 </body>
 </html>
