--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voiture</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Voiture</title>
 </head>
 <body>
 <div id="car">
@@ -24,6 +24,11 @@
 
   <div id="back-lights">
     <!-- Phares avant de la voiture -->
+  </div>
+
+
+  <div id="doors">
+    <!-- portes de la voiture -->
   </div>
 </div>
 </body>
