add feature windows

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
   <div id="doors">
     <!-- portes de la voiture -->
   </div>
+
+  <div id="windows">
+    <!-- fenêtres de la voiture -->
+  </div>
+  
 </div>
 </body>
 </html>
