--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
   <div id="windows">
     <!-- fenêtres de la voiture -->
   </div>
+
+  <div id="roof">
+    <!-- toit de la voiture -->
+  </div>
   
 </div>
 </body>
