--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
   <div id="windshield">
     <!-- fenêtres de la voiture -->
 
+  </div>
   <div id="roof">
     <!-- toit de la voiture -->
   </div>
-  
+
+    <div id="hood">
+      <!-- capot de la voiture -->
+    </div>
 </div>
 </body>
 </html>
