--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
 
 
   <div id="windshield">
-    <!-- fenêtres de la voiture -->
+    <!-- Pare-brise de la voiture -->
 
   <div id="roof">
     <!-- toit de la voiture -->
+  </div>
+
+  <div id="mirrors">
+    <!-- Rétroviseurs de la voiture -->
   </div>
   
 </div>
