--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
     <!-- Rétroviseurs de la voiture -->
   </div>
   
-    <div id="hood">
-      <!-- capot de la voiture -->
-    </div>
+  <div id="hood">
+    <!-- capot de la voiture -->
+  </div>
+
+  <div id="seats">
+    <!-- coffre de la voiture -->
+  </div>
+  
 </div>
 </body>
 </html>
