--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
     <div id="hood">
       <!-- capot de la voiture -->
     </div>
+
+  <div id="boot">
+    <!-- coffre de la voiture -->
+  </div>
+
 </div>
 </body>
 </html>
