--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
   </div>
 
   <div id="seats">
+    <!-- siège de la voiture -->
+  </div>
+  <div id="boot">
     <!-- coffre de la voiture -->
   </div>
-  
 </div>
 </body>
 </html>
