--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
   <div id="boot">
     <!-- coffre de la voiture -->
   </div>
+
+   <div id="belt">
+    <!-- ceinture de la voiture -->
+  </div>
 </div>
 </body>
 </html>
